Add information to Encoding

--- a/model.ipynb
+++ b/model.ipynb
@@ -64,7 +64,7 @@
         "\n",
         "print('Setup Complete.')"
       ],
-      "execution_count": 6,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -94,7 +94,7 @@
         "housing = pd.read_csv('./housing.csv')\n",
         "print('Data load Complete.')\n"
       ],
-      "execution_count": 7,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -132,7 +132,7 @@
       "source": [
         "housing.head()"
       ],
-      "execution_count": 8,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -270,7 +270,7 @@
       "source": [
         "housing.describe()"
       ],
-      "execution_count": 9,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -441,7 +441,7 @@
       "source": [
         "housing.info()"
       ],
-      "execution_count": 10,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -495,7 +495,7 @@
         "import matplotlib.pyplot as plt\n",
         "housing.hist(bins=50, figsize=(20,15))"
       ],
-      "execution_count": 11,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -581,7 +581,7 @@
         "housing.head()\n",
         "housing.hist(column=['median_income_cat'])"
       ],
-      "execution_count": 12,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -626,7 +626,7 @@
         "train_set.hist(column=['median_income_cat'])\n",
         "test_set.hist(column=['median_income_cat'])"
       ],
-      "execution_count": 13,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -689,7 +689,7 @@
         "train_set.hist(column=['median_income_cat'])\n",
         "test_set.hist(column=['median_income_cat'])"
       ],
-      "execution_count": 14,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -771,7 +771,7 @@
       "source": [
         "housing.plot(kind='scatter', x='longitude', y='latitude', alpha=0.1)"
       ],
-      "execution_count": 17,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -815,7 +815,7 @@
         "             s=housing['population']/100, label='population', figsize=(10,7),\n",
         "             c='median_house_value', cmap=plt.get_cmap('jet'), colorbar=True)"
       ],
-      "execution_count": 18,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -868,7 +868,7 @@
         "corr_matrix = housing.corr()\n",
         "print(corr_matrix['median_house_value'].sort_values(ascending=False))"
       ],
-      "execution_count": 19,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -917,7 +917,7 @@
         "\n",
         "scatter_matrix(housing[cor_attributes], figsize=(12,8))"
       ],
-      "execution_count": 20,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -975,7 +975,7 @@
       "source": [
         "housing.plot(kind='scatter', x='median_income', y='median_house_value')"
       ],
-      "execution_count": 21,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1055,7 +1055,7 @@
       "source": [
         "housing.corr()['median_house_value'].sort_values(ascending=False)"
       ],
-      "execution_count": 23,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1141,7 +1141,7 @@
         "print(X_num.median().values)\n",
         "X_num.info()\n"
       ],
-      "execution_count": 25,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1183,7 +1183,7 @@
         "X_num = pd.DataFrame(imputer.transform(X_num), columns=X_num.columns) \n",
         "X_num.info()"
       ],
-      "execution_count": 26,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1213,7 +1213,9 @@
         "colab_type": "text"
       },
       "source": [
-        "### Encoding text/ object columns"
+        "### Encoding text/ object columns\n",
+        "- Use of `OneHotEncoder` can result in increase of dataset size, if the encoded categorical variables have high cardianality.\n",
+        "- In practice, encode columns with low cardianality using OneHot Encoding and LabelEncoding for remaining columns"
       ]
     },
     {
@@ -1236,7 +1238,7 @@
         "\n",
         "print(encoder.classes_)"
       ],
-      "execution_count": 27,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1274,7 +1276,7 @@
         "X_cat_encoded_onehot = encoder.fit_transform(pd.DataFrame(X_cat))\n",
         "print(X_cat_encoded_onehot.toarray())"
       ],
-      "execution_count": 28,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1309,7 +1311,7 @@
         "X_cat_encoded_bin = encoder.fit_transform(X_cat)\n",
         "print(X_cat_encoded_bin)"
       ],
-      "execution_count": 29,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1420,11 +1422,11 @@
       "metadata": {
         "id": "4ZhHLUYYRFQJ",
         "colab_type": "code",
+        "outputId": "a63e85ee-608b-4b9b-88cd-a77bb485f262",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 68
-        },
-        "outputId": "a63e85ee-608b-4b9b-88cd-a77bb485f262"
+        }
       },
       "source": [
         "from sklearn.pipeline import Pipeline\n",
@@ -1450,7 +1452,7 @@
         "\n",
         "X_trans.transformers_[1][1].named_steps['label_encoder'].get_feature_names()\n"
       ],
-      "execution_count": 65,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1489,11 +1491,11 @@
       "metadata": {
         "id": "NzaDDqrfs5RA",
         "colab_type": "code",
+        "outputId": "1887bc48-0760-4170-ac6c-db5bc772998b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "1887bc48-0760-4170-ac6c-db5bc772998b"
+        }
       },
       "source": [
         "from sklearn.linear_model import LinearRegression\n",
@@ -1501,7 +1503,7 @@
         "lin_reg = LinearRegression()\n",
         "lin_reg.fit(X_prepare, y)"
       ],
-      "execution_count": 33,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1532,11 +1534,11 @@
       "metadata": {
         "id": "TgwL4cTt534r",
         "colab_type": "code",
+        "outputId": "596541e8-63e9-4757-f879-538c9ceb3456",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 85
-        },
-        "outputId": "596541e8-63e9-4757-f879-538c9ceb3456"
+        }
       },
       "source": [
         "X_data = X.iloc[:5]\n",
@@ -1550,7 +1552,7 @@
         "from sklearn.metrics import mean_squared_error\n",
         "print('MSE: ', np.sqrt(mean_squared_error(y_data, predict_data)))"
       ],
-      "execution_count": 34,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1579,11 +1581,11 @@
       "metadata": {
         "id": "6iXGCKy78P8J",
         "colab_type": "code",
+        "outputId": "7b4425e3-0711-4889-8276-0a3ddad27739",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "7b4425e3-0711-4889-8276-0a3ddad27739"
+        }
       },
       "source": [
         "from sklearn.tree import DecisionTreeRegressor\n",
@@ -1596,7 +1598,7 @@
         "from sklearn.metrics import mean_squared_error\n",
         "print('MSE: ', np.sqrt(mean_squared_error(y, X_predict)))"
       ],
-      "execution_count": 35,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1612,11 +1614,11 @@
       "metadata": {
         "id": "zFJkgN-OJbPn",
         "colab_type": "code",
+        "outputId": "ffb8abab-2210-45f9-efc5-0c32c3d9da57",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 119
-        },
-        "outputId": "ffb8abab-2210-45f9-efc5-0c32c3d9da57"
+        }
       },
       "source": [
         "from sklearn.model_selection import cross_val_score\n",
@@ -1631,7 +1633,7 @@
         "print('MEAN: ', tree_rmse_score.mean())\n",
         "print('STD: ', tree_rmse_score.std())"
       ],
-      "execution_count": 36,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1652,11 +1654,11 @@
       "metadata": {
         "id": "Cmx_U5iYLhug",
         "colab_type": "code",
+        "outputId": "dd58ec02-1329-45e6-ec31-339a5a5d918b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 119
-        },
-        "outputId": "dd58ec02-1329-45e6-ec31-339a5a5d918b"
+        }
       },
       "source": [
         "from sklearn.model_selection import cross_val_score\n",
@@ -1672,7 +1674,7 @@
         "print('MEAN: ', lin_rmse_score.mean())\n",
         "print('STD: ', lin_rmse_score.std())"
       ],
-      "execution_count": 37,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1693,11 +1695,11 @@
       "metadata": {
         "id": "YyQPi7F2Md16",
         "colab_type": "code",
+        "outputId": "b8ae6742-84c9-44f2-85a1-ae3c207d535e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "b8ae6742-84c9-44f2-85a1-ae3c207d535e"
+        }
       },
       "source": [
         "from sklearn.ensemble import RandomForestRegressor\n",
@@ -1710,7 +1712,7 @@
         "from sklearn.metrics import mean_squared_error\n",
         "print('MSE: ', np.sqrt(mean_squared_error(y, X_predict)))"
       ],
-      "execution_count": 38,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1726,11 +1728,11 @@
       "metadata": {
         "id": "lM6aCndcN11k",
         "colab_type": "code",
+        "outputId": "f5114d9d-286e-4d00-dc34-462c06b48f9b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 119
-        },
-        "outputId": "f5114d9d-286e-4d00-dc34-462c06b48f9b"
+        }
       },
       "source": [
         "from sklearn.model_selection import cross_val_score\n",
@@ -1746,7 +1748,7 @@
         "print('MEAN: ', rf_rmse_score.mean())\n",
         "print('STD: ', rf_rmse_score.std())"
       ],
-      "execution_count": 39,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1777,11 +1779,11 @@
       "metadata": {
         "id": "uzYiTWfSOKXX",
         "colab_type": "code",
+        "outputId": "b5561abb-e2e6-4ece-857b-2f6bba9e8961",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "b5561abb-e2e6-4ece-857b-2f6bba9e8961"
+        }
       },
       "source": [
         "import joblib\n",
@@ -1790,7 +1792,7 @@
         "joblib.dump(lin_reg, 'lin_model.pkl')\n",
         "joblib.dump(tree_reg, 'tree_model.pkl')"
       ],
-      "execution_count": 40,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1821,11 +1823,11 @@
       "metadata": {
         "id": "CQY67v54PBnQ",
         "colab_type": "code",
+        "outputId": "a485dbf7-f406-4a39-a0ce-68b04c63449e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 136
-        },
-        "outputId": "a485dbf7-f406-4a39-a0ce-68b04c63449e"
+        }
       },
       "source": [
         "from sklearn.model_selection import GridSearchCV\n",
@@ -1845,7 +1847,7 @@
         "\n",
         "grid_search.best_estimator_\n"
       ],
-      "execution_count": 42,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1872,11 +1874,11 @@
       "metadata": {
         "id": "lSXqjA_rRto0",
         "colab_type": "code",
+        "outputId": "40f6e033-f957-47a7-a1b0-d207e9b06a46",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 289
-        },
-        "outputId": "40f6e033-f957-47a7-a1b0-d207e9b06a46"
+        }
       },
       "source": [
         "grid_search.best_estimator_.feature_importances_\n",
@@ -1890,7 +1892,7 @@
         "           attribs), reverse=True)\n",
         "\n"
       ],
-      "execution_count": 69,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1936,11 +1938,11 @@
       "metadata": {
         "id": "F7StvOHzUF-M",
         "colab_type": "code",
+        "outputId": "15c55e5e-c63f-4156-d666-2fcb103cdf6a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "15c55e5e-c63f-4156-d666-2fcb103cdf6a"
+        }
       },
       "source": [
         "model = grid_search.best_estimator_\n",
@@ -1954,7 +1956,7 @@
         "\n",
         "print('MSE: ', np.sqrt(mean_squared_error(y_test, predict)))"
       ],
-      "execution_count": 45,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
