--- a/01.5.1-ml-twotower-model.ipynb
+++ b/01.5.1-ml-twotower-model.ipynb
@@ -5274,8 +5274,8 @@
       "source": [
         "embeddings_df = pd.DataFrame({\n",
         "    'movie_id_raw': synopsis_df['movie_id'].tolist(),\n",
-        "    'title': title_embeddings.numpy().tolist(),\n",
-        "    'synopsis': synopsis_embeddings.numpy().tolist(),\n",
+        "    'title_embeddings': title_embeddings.numpy().tolist(),\n",
+        "    'synopsis_embeddings': synopsis_embeddings.numpy().tolist(),\n",
         "})\n",
         "embeddings_df"
       ],
@@ -5285,16 +5285,16 @@
           "height": 424
         },
         "id": "iOleUgN4ZBNG",
-        "outputId": "6fa93f4b-2b96-4574-fd9f-cd9f0c2a0dba"
+        "outputId": "f1b75f3b-c9ff-42ff-dce8-8f119f329ddd"
       },
       "id": "iOleUgN4ZBNG",
-      "execution_count": 67,
+      "execution_count": 110,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "      movie_id_raw                                              title  \\\n",
+              "      movie_id_raw                                   title_embeddings  \\\n",
               "0              242  [-0.13162778317928314, -0.10936661064624786, -...   \n",
               "1              257  [0.08139041066169739, -0.16367477178573608, -0...   \n",
               "2              111  [0.15842819213867188, -0.032023221254348755, -...   \n",
@@ -5307,7 +5307,7 @@
               "1662          1533  [0.11791486293077469, -0.1459496170282364, -0....   \n",
               "1663          1618  [-0.27401217818260193, -0.17397956550121307, -...   \n",
               "\n",
-              "                                               synopsis  \n",
+              "                                    synopsis_embeddings  \n",
               "0     [-0.22289082407951355, 0.27888065576553345, 0....  \n",
               "1     [-0.11132552474737167, -0.04103025048971176, 0...  \n",
               "2     [0.07356611639261246, -0.005173327401280403, 0...  \n",
@@ -5325,7 +5325,7 @@
             "text/html": [
               "\n",
               "\n",
-              "  <div id=\"df-2e86cefe-d9ae-43f8-b5de-373ddf5bb90a\">\n",
+              "  <div id=\"df-4edee19e-b95e-4393-b2f4-7c7e3cf9220a\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -5346,8 +5346,8 @@
               "    <tr style=\"text-align: right;\">\n",
               "      <th></th>\n",
               "      <th>movie_id_raw</th>\n",
-              "      <th>title</th>\n",
-              "      <th>synopsis</th>\n",
+              "      <th>title_embeddings</th>\n",
+              "      <th>synopsis_embeddings</th>\n",
               "    </tr>\n",
               "  </thead>\n",
               "  <tbody>\n",
@@ -5421,7 +5421,7 @@
               "</table>\n",
               "<p>1664 rows × 3 columns</p>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-2e86cefe-d9ae-43f8-b5de-373ddf5bb90a')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-4edee19e-b95e-4393-b2f4-7c7e3cf9220a')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "\n",
@@ -5434,8 +5434,8 @@
               "\n",
               "\n",
               "\n",
-              "    <div id=\"df-ae01ba93-c635-4761-ad01-eee94a679009\">\n",
-              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-ae01ba93-c635-4761-ad01-eee94a679009')\"\n",
+              "    <div id=\"df-15f37b91-e811-4990-bdc4-1d1caf55fc58\">\n",
+              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-15f37b91-e811-4990-bdc4-1d1caf55fc58')\"\n",
               "              title=\"Suggest charts.\"\n",
               "              style=\"display:none;\">\n",
               "\n",
@@ -5492,7 +5492,7 @@
               "\n",
               "function displayQuickchartButton(domScope) {\n",
               "  let quickchartButtonEl =\n",
-              "    domScope.querySelector('#df-ae01ba93-c635-4761-ad01-eee94a679009 button.colab-df-quickchart');\n",
+              "    domScope.querySelector('#df-15f37b91-e811-4990-bdc4-1d1caf55fc58 button.colab-df-quickchart');\n",
               "  quickchartButtonEl.style.display =\n",
               "    google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "}\n",
@@ -5539,12 +5539,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-2e86cefe-d9ae-43f8-b5de-373ddf5bb90a button.colab-df-convert');\n",
+              "          document.querySelector('#df-4edee19e-b95e-4393-b2f4-7c7e3cf9220a button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-2e86cefe-d9ae-43f8-b5de-373ddf5bb90a');\n",
+              "          const element = document.querySelector('#df-4edee19e-b95e-4393-b2f4-7c7e3cf9220a');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -5566,7 +5566,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 67
+          "execution_count": 110
         }
       ]
     },
@@ -5583,10 +5583,10 @@
           "height": 424
         },
         "id": "gepbRK_baF_j",
-        "outputId": "08f7f20f-8a9c-4b45-855e-cd4dbeebc599"
+        "outputId": "42f8f4d6-a4c1-4deb-ef8e-dfee9ca32e49"
       },
       "id": "gepbRK_baF_j",
-      "execution_count": 70,
+      "execution_count": 111,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5610,7 +5610,7 @@
             "text/html": [
               "\n",
               "\n",
-              "  <div id=\"df-8e57e914-1d4f-4e37-8b84-a76a6a2c6bea\">\n",
+              "  <div id=\"df-9a7b61ff-044b-4c9d-b86b-b7fd3b67a749\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -5754,7 +5754,7 @@
               "</table>\n",
               "<p>80000 rows × 7 columns</p>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-8e57e914-1d4f-4e37-8b84-a76a6a2c6bea')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-9a7b61ff-044b-4c9d-b86b-b7fd3b67a749')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "\n",
@@ -5767,8 +5767,8 @@
               "\n",
               "\n",
               "\n",
-              "    <div id=\"df-59c1a1b5-f27a-417b-b1bf-51585eb00133\">\n",
-              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-59c1a1b5-f27a-417b-b1bf-51585eb00133')\"\n",
+              "    <div id=\"df-870043b0-402e-447a-90dd-1376a967f3b5\">\n",
+              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-870043b0-402e-447a-90dd-1376a967f3b5')\"\n",
               "              title=\"Suggest charts.\"\n",
               "              style=\"display:none;\">\n",
               "\n",
@@ -5825,7 +5825,7 @@
               "\n",
               "function displayQuickchartButton(domScope) {\n",
               "  let quickchartButtonEl =\n",
-              "    domScope.querySelector('#df-59c1a1b5-f27a-417b-b1bf-51585eb00133 button.colab-df-quickchart');\n",
+              "    domScope.querySelector('#df-870043b0-402e-447a-90dd-1376a967f3b5 button.colab-df-quickchart');\n",
               "  quickchartButtonEl.style.display =\n",
               "    google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "}\n",
@@ -5872,12 +5872,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-8e57e914-1d4f-4e37-8b84-a76a6a2c6bea button.colab-df-convert');\n",
+              "          document.querySelector('#df-9a7b61ff-044b-4c9d-b86b-b7fd3b67a749 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-8e57e914-1d4f-4e37-8b84-a76a6a2c6bea');\n",
+              "          const element = document.querySelector('#df-9a7b61ff-044b-4c9d-b86b-b7fd3b67a749');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -5899,7 +5899,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 70
+          "execution_count": 111
         }
       ]
     },
@@ -5915,10 +5915,10 @@
           "height": 424
         },
         "id": "a-thZGrDbBXb",
-        "outputId": "d83e22a5-b608-46b7-f1b5-d2d3665dbcab"
+        "outputId": "a5e68851-3c89-447f-ad97-773508063352"
       },
       "id": "a-thZGrDbBXb",
-      "execution_count": 89,
+      "execution_count": 112,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5942,7 +5942,7 @@
             "text/html": [
               "\n",
               "\n",
-              "  <div id=\"df-c6577289-8b40-4743-9126-a5652998d721\">\n",
+              "  <div id=\"df-6a241ec0-a6da-405b-b8f9-1dfa07cd6827\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -6026,7 +6026,7 @@
               "</table>\n",
               "<p>1603 rows × 2 columns</p>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-c6577289-8b40-4743-9126-a5652998d721')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-6a241ec0-a6da-405b-b8f9-1dfa07cd6827')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "\n",
@@ -6039,8 +6039,8 @@
               "\n",
               "\n",
               "\n",
-              "    <div id=\"df-bf246784-0f3c-46e9-8ee7-5656feb31f49\">\n",
-              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-bf246784-0f3c-46e9-8ee7-5656feb31f49')\"\n",
+              "    <div id=\"df-0299bd6a-5f1f-4ef3-8ef0-1a2d1b61eda1\">\n",
+              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-0299bd6a-5f1f-4ef3-8ef0-1a2d1b61eda1')\"\n",
               "              title=\"Suggest charts.\"\n",
               "              style=\"display:none;\">\n",
               "\n",
@@ -6097,7 +6097,7 @@
               "\n",
               "function displayQuickchartButton(domScope) {\n",
               "  let quickchartButtonEl =\n",
-              "    domScope.querySelector('#df-bf246784-0f3c-46e9-8ee7-5656feb31f49 button.colab-df-quickchart');\n",
+              "    domScope.querySelector('#df-0299bd6a-5f1f-4ef3-8ef0-1a2d1b61eda1 button.colab-df-quickchart');\n",
               "  quickchartButtonEl.style.display =\n",
               "    google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "}\n",
@@ -6144,12 +6144,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-c6577289-8b40-4743-9126-a5652998d721 button.colab-df-convert');\n",
+              "          document.querySelector('#df-6a241ec0-a6da-405b-b8f9-1dfa07cd6827 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-c6577289-8b40-4743-9126-a5652998d721');\n",
+              "          const element = document.querySelector('#df-6a241ec0-a6da-405b-b8f9-1dfa07cd6827');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -6171,7 +6171,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 89
+          "execution_count": 112
         }
       ]
     },
@@ -6187,16 +6187,16 @@
           "height": 424
         },
         "id": "1KiO3-3ZaqMQ",
-        "outputId": "bcbcce65-e925-44c0-8c47-6ba6324ccb7e"
+        "outputId": "c678434f-4cc6-452f-8182-6b04bde31025"
       },
       "id": "1KiO3-3ZaqMQ",
-      "execution_count": 92,
+      "execution_count": 113,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "      movie_id_raw                                              title  \\\n",
+              "      movie_id_raw                                   title_embeddings  \\\n",
               "0              242  [-0.13162778317928314, -0.10936661064624786, -...   \n",
               "1              257  [0.08139041066169739, -0.16367477178573608, -0...   \n",
               "2              111  [0.15842819213867188, -0.032023221254348755, -...   \n",
@@ -6209,7 +6209,7 @@
               "1601          1505  [-0.07384374737739563, -0.405456006526947, -0....   \n",
               "1602          1618  [-0.27401217818260193, -0.17397956550121307, -...   \n",
               "\n",
-              "                                               synopsis  movie_id  \n",
+              "                                    synopsis_embeddings  movie_id  \n",
               "0     [-0.22289082407951355, 0.27888065576553345, 0....       279  \n",
               "1     [-0.11132552474737167, -0.04103025048971176, 0...        31  \n",
               "2     [0.07356611639261246, -0.005173327401280403, 0...        41  \n",
@@ -6227,7 +6227,7 @@
             "text/html": [
               "\n",
               "\n",
-              "  <div id=\"df-36dbaf65-d702-46d4-a35f-88ffe008a880\">\n",
+              "  <div id=\"df-42907aae-3fda-4703-8a16-0d3e0454b402\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -6248,8 +6248,8 @@
               "    <tr style=\"text-align: right;\">\n",
               "      <th></th>\n",
               "      <th>movie_id_raw</th>\n",
-              "      <th>title</th>\n",
-              "      <th>synopsis</th>\n",
+              "      <th>title_embeddings</th>\n",
+              "      <th>synopsis_embeddings</th>\n",
               "      <th>movie_id</th>\n",
               "    </tr>\n",
               "  </thead>\n",
@@ -6335,7 +6335,7 @@
               "</table>\n",
               "<p>1603 rows × 4 columns</p>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-36dbaf65-d702-46d4-a35f-88ffe008a880')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-42907aae-3fda-4703-8a16-0d3e0454b402')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "\n",
@@ -6348,8 +6348,8 @@
               "\n",
               "\n",
               "\n",
-              "    <div id=\"df-66959e80-ec60-48e4-95f6-2b929dbfb68f\">\n",
-              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-66959e80-ec60-48e4-95f6-2b929dbfb68f')\"\n",
+              "    <div id=\"df-884927d7-40d6-44fa-83b3-d9c34ac5f2a3\">\n",
+              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-884927d7-40d6-44fa-83b3-d9c34ac5f2a3')\"\n",
               "              title=\"Suggest charts.\"\n",
               "              style=\"display:none;\">\n",
               "\n",
@@ -6406,7 +6406,7 @@
               "\n",
               "function displayQuickchartButton(domScope) {\n",
               "  let quickchartButtonEl =\n",
-              "    domScope.querySelector('#df-66959e80-ec60-48e4-95f6-2b929dbfb68f button.colab-df-quickchart');\n",
+              "    domScope.querySelector('#df-884927d7-40d6-44fa-83b3-d9c34ac5f2a3 button.colab-df-quickchart');\n",
               "  quickchartButtonEl.style.display =\n",
               "    google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "}\n",
@@ -6453,12 +6453,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-36dbaf65-d702-46d4-a35f-88ffe008a880 button.colab-df-convert');\n",
+              "          document.querySelector('#df-42907aae-3fda-4703-8a16-0d3e0454b402 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-36dbaf65-d702-46d4-a35f-88ffe008a880');\n",
+              "          const element = document.querySelector('#df-42907aae-3fda-4703-8a16-0d3e0454b402');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -6480,7 +6480,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 92
+          "execution_count": 113
         }
       ]
     },
@@ -6493,7 +6493,7 @@
         "id": "OA_26Y6ncdwC"
       },
       "id": "OA_26Y6ncdwC",
-      "execution_count": 95,
+      "execution_count": 114,
       "outputs": []
     },
     {
@@ -6701,12 +6701,12 @@
         "train_dataset.to_ddf().head()"
       ],
       "metadata": {
-        "id": "hIvw-FTJelLG",
-        "outputId": "87ef84ce-a9f7-4cb7-c47d-a7e402dbf851",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 206
-        }
+        },
+        "id": "hIvw-FTJelLG",
+        "outputId": "87ef84ce-a9f7-4cb7-c47d-a7e402dbf851"
       },
       "id": "hIvw-FTJelLG",
       "execution_count": 100,
